--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,9 @@ body {
   background-color: #ffffff;
   color: #434455;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
 }
 h1,
 h2,
@@ -27,46 +27,6 @@ ul {
 img {
   display: block;
 }
-
-.container {
-  max-width: 1158px;
-  padding: 0 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.section {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.link {
-  text-decoration: none;
-  color: #2e2f42;
-  font-weight: 500;
-  padding: 24px 0;
-  display: block;
-  height: 72px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
-}
-.link:focus,
-.link:hover {
-  color: #404bbf;
-}
-.link-logo {
-  display: inline-block;
-  margin-right: 76px;
-  text-decoration: none;
-  font-size: 18px;
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: 1.17;
-  letter-spacing: 0.54px;
-  color: #4d5ae5;
-}
-.link-logo-studio-header {
-  color: #2e2f42;
-}
 ul,
 ol {
   list-style-type: none;
@@ -74,39 +34,79 @@ ol {
 address {
   font-style: normal;
 }
-.link-address {
+.container {
+  max-width: 320px;
+  padding: 0 16px;
+  margin: 0 auto;
+}
+.section {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+/* mobile version */
+/* styles section header */
+.header-menu {
+  border-bottom: 1px solid #e7e9fc;
+  background-color: #fff;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+}
+.container-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.btn-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: none;
+  background-color: #fff;
+}
+.open-btn-menu {
+  fill: #2f2f37;
+}
+.link-logo {
+  display: inline-block;
   text-decoration: none;
-  color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 18px;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: #4d5ae5;
+  margin-top: 17.5px;
+  margin-bottom: 17.5px;
 }
-.link-address:hover,
-.link-address:focus {
-  color: #404bbf;
+.link-logo-studio-header {
+  color: #2e2f42;
 }
+
+/* styles section hero */
 
 .hero-section {
   background-color: #2e2f42;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding-top: 72px;
+  padding-bottom: 72px;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url(../images/office-table.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  max-width: 1440px;
-  margin: 0 auto;
 }
 .title {
   color: white;
-  font-size: 56px;
+  font-size: 36px;
   font-weight: 700;
-  line-height: 1.07;
-  letter-spacing: 1.12px;
+  line-height: 1.1;
   text-align: center;
-  max-width: 496px;
   margin: 0 auto;
 }
 .button {
@@ -114,7 +114,7 @@ address {
   background-color: #4d5ae5;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 0.7;
   font-weight: 500;
   letter-spacing: 0.04em;
   cursor: pointer;
@@ -122,25 +122,13 @@ address {
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   display: block;
-  margin: 48px auto 0;
+  margin: 72px auto 0;
   min-width: 169px;
   height: 56px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button:hover {
-  background-color: #404bbf;
-}
-.button:focus {
-  background-color: #404bbf;
-}
-.features-title {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  text-align: center;
-}
+
+/* styles section features */
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -156,11 +144,23 @@ address {
 }
 .features {
   color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.4px;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 0.9;
   margin-bottom: 8px;
+}
+.features-box {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+}
+/* styles section team */
+.section-our-team {
+  background-color: #f4f4fd;
+}
+.team-container {
+  padding: 0 28px;
 }
 .team-title {
   color: #2e2f42;
@@ -168,175 +168,32 @@ address {
   font-weight: 700;
   text-transform: capitalize;
   line-height: 1.11;
-  letter-spacing: 0.02em;
   text-align: center;
   margin-bottom: 72px;
-}
-.team-member {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.4px;
-  margin-bottom: 8px;
-}
-.team-member-card {
-  background-color: #ffffff;
-  text-align: center;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-.team-member-role {
-  font-size: 16px;
-  margin-bottom: 8px;
-}
-.portfolio-title {
-  color: #2e2f42;
-  font-size: 36px;
-  font-weight: 700;
-  text-transform: capitalize;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-align: center;
-  margin-bottom: 72px;
-}
-.portfolio-service {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  margin-bottom: 8px;
-}
-.footer {
-  background-color: #2e2f42;
-  padding: 100px 0;
-}
-.logo-footer {
-  margin-bottom: 16px;
-}
-.footer-text {
-  color: #f4f4fd;
-  width: 264px;
 }
 
-.link-logo-studio-footer {
-  color: #f4f4fd;
-}
-.nav-box {
-  display: flex;
-  align-items: center;
-}
-.navigation {
-  display: flex;
-  gap: 40px;
-  align-self: baseline;
-}
-.address-nav {
-  display: flex;
-  gap: 40px;
-}
-.header-menu {
-  border-bottom: 1px solid #e7e9fc;
-  height: 72px;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-.container-header {
-  max-width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-}
-.features-box {
-  display: flex;
-  gap: 24px;
-}
-.features-item {
-  display: block;
-  width: 264px;
-}
-.section-our-team {
-  padding-top: 120px;
-  padding-bottom: 120px;
-  background-color: #f4f4fd;
-}
 .team-box-items {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  gap: 72px;
 }
 .text-team-member-card {
   display: block;
   padding: 32px 0;
 }
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
-}
-.portfolio-list-item {
-  width: calc((100% - 48px) / 3);
-}
-.text-portfolio-list-item {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-  background-color: white;
-}
-.link {
-  position: relative;
-}
-.current-page-link {
-  color: #404bbf;
-}
-.current-page-link::after {
-  display: block;
-  width: 48px;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #404bbf;
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-}
-.link-portfolio:hover::after {
-  display: block;
-  width: 66px;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #404bbf;
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-}
-.link-contacts:hover::after {
-  display: block;
-  width: 67px;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #404bbf;
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-}
-.icon-box {
-  display: flex;
-  width: 264px;
-  height: 112px;
-  background-color: #f4f4fd;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  align-items: center;
-  justify-content: center;
+.team-member {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 0.8;
   margin-bottom: 8px;
+}
+.team-member-role {
+  margin-bottom: 8px;
+  text-align: center;
+  line-height: 0.6;
+  font-weight: 400;
 }
 .icon-soclink-list {
   display: flex;
@@ -352,12 +209,6 @@ address {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link-icon:hover,
-.link-icon:focus {
-  background-color: #404bbf;
 }
 .icon-soclink-list svg {
   display: block;
@@ -365,49 +216,106 @@ address {
   object-fit: cover;
   fill: #f4f4fd;
 }
-.portfolio-pic {
-  position: relative;
-  overflow: hidden;
-}
-.paragraph {
-  position: absolute;
-  top: 0;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  padding: 40px 32px;
-  background-color: #4d5ae5;
-  height: 100%;
-  width: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-list-item {
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-list-item:hover {
+.team-member-card {
+  background-color: #ffffff;
+  text-align: center;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
-.portfolio-list-item:hover .paragraph {
-  transform: translateY(0%);
+/* styles section portfolio */
+.portfolio-title {
+  color: #2e2f42;
+  font-size: 36px;
+  font-weight: 700;
+  text-transform: capitalize;
+  line-height: 0.9;
+  text-align: center;
+  margin-bottom: 72px;
 }
-.title-soclist-footer {
-  font-weight: 500;
-  color: white;
-  margin-bottom: 16px;
+.portfolio-service {
+  color: #2e2f42;
+  font-size: 20px;
+  line-height: 0.8;
+  margin-bottom: 8px;
+}
+.service-name {
+  font-weight: 400;
+  line-height: 0.6;
+}
+.text-portfolio-list-item {
+  margin: 32px 0;
+  padding: 0 16px;
+}
+.portfolio-list-item {
+  border: 1px solid #f4f4fd;
+  background-color: #fff;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+.portfolio-list {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+}
+.portfolio-list-item img {
+  object-fit: cover;
+}
+
+/* styles footer section */
+.footer {
+  background-color: #2e2f42;
+  padding-top: 97.5px;
+  padding-bottom: 96px;
 }
 .container-footer {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  gap: 72px;
+  justify-content: center;
+  align-items: center;
 }
 .box-logo-text {
-  margin-right: 120px;
+  text-align: center;
+}
+
+.logo-footer {
+  margin-bottom: 0;
+  margin-bottom: 17.5px;
+}
+.footer-text {
+  color: #f4f4fd;
+  font-weight: 400;
+}
+.link-logo-studio-footer {
+  color: #f4f4fd;
+}
+.link-logo-studio-footer {
+  color: #f4f4fd;
+}
+.soc-contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+}
+.title-soclist-footer {
+  color: #fff;
+  line-height: 0.7;
 }
 .icon-soclink-list-footer {
   display: flex;
   gap: 16px;
+}
+.link-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
 }
 .icon-soclink-list-footer svg {
   display: block;
@@ -415,29 +323,23 @@ address {
   object-fit: cover;
   fill: #f4f4fd;
 }
-.icon-soclink-list-footer .link-icon {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.icon-soclink-list-footer .link-icon:hover,
-.icon-soclink-list-footer .link-icon:focus {
-  background-color: #31d0aa;
-}
-.soc-contacts {
-  margin-right: 80px;
-}
-/* Foooter form */
+
 .footer-subscribe-text {
   margin-bottom: 16px;
   color: #fff;
   font-size: 16px;
   font-weight: 500;
+  text-align: center;
 }
 .form-subscribe {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
 }
 .subscribe-input {
-  width: 264px;
+  width: 288px;
   height: 40px;
   border: 1px solid #fff;
   color: white;
@@ -446,7 +348,7 @@ address {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 2;
   letter-spacing: 0.04em;
   padding: 8px 16px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -465,19 +367,68 @@ address {
   color: #fff;
   border: none;
   cursor: pointer;
+  padding: 8px 24px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-}
-.subscribe-btn:hover,
-.subscribe-btn:focus {
-  background-color: #404bbf;
 }
 .icon-sub-plane {
   margin-left: 16px;
 }
 
-/* modal window */
+/* 
+
+.link {
+  text-decoration: none;
+  color: #2e2f42;
+  font-weight: 500;
+  padding: 24px 0;
+  display: block;
+  height: 72px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+}
+.link:focus,
+.link:hover {
+  color: #404bbf;
+}
+
+
+.link-address {
+  text-decoration: none;
+  color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.link-address:hover,
+.link-address:focus {
+  color: #404bbf;
+}
+
+.nav-box {
+  display: flex;
+  align-items: center;
+}
+.navigation {
+  display: flex;
+  gap: 40px;
+  align-self: baseline;
+}
+.address-nav {
+  display: flex;
+  gap: 40px;
+}
+
+
+.link-icon:hover,
+.link-icon:focus {
+  background-color: #404bbf;
+}
+
+.icon-soclink-list-footer .link-icon:hover,
+.icon-soclink-list-footer .link-icon:focus {
+  background-color: #31d0aa;
+}
+
 
 .backdrop {
   position: fixed;
@@ -671,4 +622,4 @@ address {
 .btn-send-modal:hover,
 .btn-send-modal:focus {
   background-color: #404bbf;
-}
+} */
