--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ address {
   background-color: #4d5ae5;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  line-height: 0.7;
+  line-height: 1.5;
   font-weight: 500;
   letter-spacing: 0.04em;
   cursor: pointer;
@@ -147,7 +147,7 @@ address {
   text-align: center;
   font-size: 36px;
   font-weight: 700;
-  line-height: 0.9;
+  line-height: 1.1;
   margin-bottom: 8px;
 }
 .features-box {
@@ -167,7 +167,7 @@ address {
   font-size: 36px;
   font-weight: 700;
   text-transform: capitalize;
-  line-height: 1.11;
+  line-height: 1.1;
   text-align: center;
   margin-bottom: 72px;
 }
@@ -186,13 +186,13 @@ address {
   text-align: center;
   font-size: 20px;
   font-weight: 500;
-  line-height: 0.8;
+  line-height: 1.2;
   margin-bottom: 8px;
 }
 .team-member-role {
   margin-bottom: 8px;
   text-align: center;
-  line-height: 0.6;
+  line-height: 1.5;
   font-weight: 400;
 }
 .icon-soclink-list {
@@ -230,19 +230,19 @@ address {
   font-size: 36px;
   font-weight: 700;
   text-transform: capitalize;
-  line-height: 0.9;
+  line-height: 1.1;
   text-align: center;
   margin-bottom: 72px;
 }
 .portfolio-service {
   color: #2e2f42;
   font-size: 20px;
-  line-height: 0.8;
+  line-height: 1.2;
   margin-bottom: 8px;
 }
 .service-name {
   font-weight: 400;
-  line-height: 0.6;
+  line-height: 1.5;
 }
 .text-portfolio-list-item {
   margin: 32px 0;
@@ -302,7 +302,7 @@ address {
 }
 .title-soclist-footer {
   color: #fff;
-  line-height: 0.7;
+  line-height: 1.5;
 }
 .icon-soclink-list-footer {
   display: flex;
@@ -375,61 +375,7 @@ address {
 .icon-sub-plane {
   margin-left: 16px;
 }
-
-/* 
-
-.link {
-  text-decoration: none;
-  color: #2e2f42;
-  font-weight: 500;
-  padding: 24px 0;
-  display: block;
-  height: 72px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
-}
-.link:focus,
-.link:hover {
-  color: #404bbf;
-}
-
-
-.link-address {
-  text-decoration: none;
-  color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.link-address:hover,
-.link-address:focus {
-  color: #404bbf;
-}
-
-.nav-box {
-  display: flex;
-  align-items: center;
-}
-.navigation {
-  display: flex;
-  gap: 40px;
-  align-self: baseline;
-}
-.address-nav {
-  display: flex;
-  gap: 40px;
-}
-
-
-.link-icon:hover,
-.link-icon:focus {
-  background-color: #404bbf;
-}
-
-.icon-soclink-list-footer .link-icon:hover,
-.icon-soclink-list-footer .link-icon:focus {
-  background-color: #31d0aa;
-}
-
-
+/* styles modal window */
 .backdrop {
   position: fixed;
   top: 0;
@@ -450,15 +396,15 @@ address {
   pointer-events: auto;
 }
 .modal-window {
-  width: 408px;
-  min-height: 584px;
+  width: 288px;
+  min-height: 623px;
   border-radius: 4px;
   background-color: #fcfcfc;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  padding: 72px 24px 24px 24px;
+  padding: 72px 16px 24px 16px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -553,7 +499,7 @@ address {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
+  color: #8e8f99;
   background-color: transparent;
   padding: 8px 16px;
   outline: transparent;
@@ -617,9 +563,60 @@ address {
   border: none;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.btn-send-modal:hover,
-.btn-send-modal:focus {
+
+/* 
+
+.link {
+  text-decoration: none;
+  color: #2e2f42;
+  font-weight: 500;
+  padding: 24px 0;
+  display: block;
+  height: 72px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+}
+.link:focus,
+.link:hover {
+  color: #404bbf;
+}
+
+
+.link-address {
+  text-decoration: none;
+  color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.link-address:hover,
+.link-address:focus {
+  color: #404bbf;
+}
+
+.nav-box {
+  display: flex;
+  align-items: center;
+}
+.navigation {
+  display: flex;
+  gap: 40px;
+  align-self: baseline;
+}
+.address-nav {
+  display: flex;
+  gap: 40px;
+}
+
+
+.link-icon:hover,
+.link-icon:focus {
   background-color: #404bbf;
-} */
+}
+
+.icon-soclink-list-footer .link-icon:hover,
+.icon-soclink-list-footer .link-icon:focus {
+  background-color: #31d0aa;
+}
+
+
+ */
