--- a/css/styles.css
+++ b/css/styles.css
@@ -423,20 +423,6 @@ address {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.btn-close-modal:hover,
-.btn-close-modal:focus {
-  background-color: #404bbf;
-  border: none;
-}
-.icon-btn-close {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.btn-close-modal:hover .icon-btn-close,
-.btn-close-modal:focus .icon-btn-close {
-  fill: white;
 }
 .modal-title {
   color: #2e2f42;
@@ -515,7 +501,7 @@ address {
 .checkbox-box {
   margin-bottom: 24px;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 .checking-box {
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -543,10 +529,18 @@ address {
   line-height: 1.17;
   letter-spacing: 0.04em;
 }
+.box-text-privacy {
+  color: #8e8f99;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.2;
+  letter-spacing: 0.04em;
+}
 
 .privacy-link {
   color: #4d5ae5;
 }
+
 .btn-send-modal {
   display: block;
   min-width: 169px;
@@ -564,59 +558,83 @@ address {
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
-
-/* 
-
-.link {
-  text-decoration: none;
-  color: #2e2f42;
-  font-weight: 500;
-  padding: 24px 0;
-  display: block;
-  height: 72px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
+/* styles menu window */
+.backdrop-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link:focus,
-.link:hover {
-  color: #404bbf;
+.backdrop-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
-
-
-.link-address {
-  text-decoration: none;
-  color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.menu-window {
+  width: 320px;
+  min-height: 640px;
+  padding: 72px 24px 40px 16px;
+  margin: 0 auto;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
 }
-.link-address:hover,
-.link-address:focus {
-  color: #404bbf;
-}
-
-.nav-box {
+.btn-close-menu {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
   display: flex;
+  justify-content: center;
   align-items: center;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+}
+.link {
+  color: #2e2f42;
+  text-decoration: none;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
 .navigation {
   display: flex;
+  flex-direction: column;
   gap: 40px;
-  align-self: baseline;
+  margin-bottom: 168px;
+}
+.current-page-link {
+  color: #404bbf;
 }
 .address-nav {
   display: flex;
+  flex-direction: column;
+  gap: 24px;
+  justify-content: flex-start;
+  margin-bottom: 48px;
+}
+.link-address {
+  text-decoration: none;
+  color: #434455;
+  font-size: 20px;
+  line-height: 1.2;
+}
+.icon-menu {
   gap: 40px;
 }
-
-
-.link-icon:hover,
-.link-icon:focus {
-  background-color: #404bbf;
-}
-
-.icon-soclink-list-footer .link-icon:hover,
-.icon-soclink-list-footer .link-icon:focus {
-  background-color: #31d0aa;
-}
-
-
- */
