--- a/css/styles.css
+++ b/css/styles.css
@@ -429,6 +429,7 @@ address {
   padding: 0;
   cursor: pointer;
 }
+
 .modal-title {
   color: #2e2f42;
   text-align: center;
@@ -564,35 +565,24 @@ address {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 /* styles menu window */
-.backdrop-menu {
+.container-header {
+  position: relative;
+}
+
+.menu-window {
+  position: absolute;
   position: fixed;
   top: 0;
-  left: 0;
-  z-index: 999;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.backdrop-menu.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-.menu-window {
+  right: 0;
   width: 320px;
   min-height: 100%;
   padding: 72px 24px 40px 16px;
   margin: 0 auto;
   background-color: #fff;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translateY(100%);
+}
+.menu-window.is-open {
+  transform: translateY(0%);
 }
 .btn-close-menu {
   position: absolute;
@@ -653,7 +643,49 @@ address {
     background-size: cover;
   }
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
+  .menu-window .soc-contacts,
+  .btn-menu,
+  .btn-close-menu {
+    display: none;
+  }
+  .menu-window {
+    position: relative;
+    transform: translateY(0%);
+    display: flex;
+    flex-direction: row;
+    gap: 121px;
+    padding: 0 0 0 120px;
+    width: 100%;
+  }
+  nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .navigation {
+    flex-direction: row;
+    gap: 40px;
+    margin: 0;
+  }
+  .navigation .link {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+  }
+  .link-address {
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+  }
+  .link-logo {
+    margin-top: 25.5px;
+    margin-bottom: 25.5px;
+  }
+  .address-nav {
+    gap: 12px;
+    margin: 0;
+  }
   .container {
     max-width: 768px;
   }
@@ -705,12 +737,14 @@ address {
   .portfolio-list-item:nth-child(2) {
     margin-bottom: 48px;
   }
+
   .container-footer {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 24px;
     justify-content: flex-start;
     align-items: flex-start;
+    padding-left: 108px;
   }
   .footer-item {
     flex-basis: calc((100% - 24px) / 2);
@@ -730,6 +764,8 @@ address {
   }
   .box-logo-text {
     text-align: start;
+  }
+  .footer-text {
     width: 264px;
   }
   .soc-contacts {
