--- a/css/styles.css
+++ b/css/styles.css
@@ -635,6 +635,7 @@ address {
 }
 
 /* tablet styles */
+/* header & hero tablet */
 @media (min-resolution: 192dpi) {
   .hero-section {
     background-image: url('../images/people-office@2x.jpg');
@@ -657,6 +658,8 @@ address {
     gap: 121px;
     padding: 0 0 0 120px;
     width: 100%;
+    height: 72px;
+    align-items: center;
   }
   nav {
     display: flex;
@@ -684,10 +687,15 @@ address {
   }
   .address-nav {
     gap: 12px;
-    margin: 0;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    line-height: 1.2;
   }
   .container {
     max-width: 768px;
+  }
+  .container-header {
+    height: 72px;
   }
   .hero-section {
     padding: 112px 136px;
@@ -695,6 +703,24 @@ address {
   .title {
     font-size: 56px;
   }
+  .link {
+    position: relative;
+  }
+  .current-page-link {
+    color: #404bbf;
+  }
+  .current-page-link::after {
+    display: block;
+    width: 48px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -20px;
+  }
+  /* features tablet */
   .features-box {
     flex-direction: row;
     flex-wrap: wrap;
@@ -710,6 +736,7 @@ address {
   .features-item:nth-child(2) {
     margin-bottom: 48px;
   }
+  /* team tablet */
   .team-container {
     padding: 0 108px;
   }
@@ -725,6 +752,7 @@ address {
   .team-member-card:nth-child(2) {
     margin-bottom: 40px;
   }
+  /* portfolio tablet */
   .portfolio-list {
     flex-direction: row;
     flex-wrap: wrap;
@@ -737,7 +765,7 @@ address {
   .portfolio-list-item:nth-child(2) {
     margin-bottom: 48px;
   }
-
+  /* footer tablet */
   .container-footer {
     flex-direction: row;
     flex-wrap: wrap;
