--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,7 @@ address {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  align-content: center;
 }
 .btn-menu {
   display: flex;
@@ -98,7 +99,7 @@ address {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url('../images/people-office-tablet-2.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -250,8 +251,7 @@ address {
   line-height: 1.5;
 }
 .text-portfolio-list-item {
-  margin: 32px 0;
-  padding: 0 16px;
+  padding: 32px 16px;
 }
 .portfolio-list-item {
   border: 1px solid #f4f4fd;
@@ -647,7 +647,11 @@ address {
 /* header & hero tablet */
 @media (min-resolution: 192dpi) {
   .hero-section {
-    background-image: url('../images/people-office@2x.jpg');
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/people-office@2x.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -665,9 +669,9 @@ address {
     display: flex;
     flex-direction: row;
     gap: 121px;
-    padding: 0 0 0 120px;
+    padding: 0;
+    margin: 0 0 0 120px;
     width: 100%;
-    height: 72px;
     align-items: center;
   }
   nav {
@@ -684,6 +688,8 @@ address {
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
+    padding-top: 24px;
+    padding-bottom: 24px;
   }
   .link-address {
     font-size: 12px;
@@ -691,21 +697,18 @@ address {
     letter-spacing: 0.04em;
   }
   .link-logo {
-    margin-top: 25.5px;
-    margin-bottom: 25.5px;
+    margin: 0;
+    padding-top: 25.5px;
+    padding-bottom: 25.5px;
   }
   .address-nav {
     gap: 12px;
-    margin-top: 12px;
-    margin-bottom: 12px;
     line-height: 1.2;
     align-items: center;
+    margin-bottom: 0;
   }
   .container {
     max-width: 768px;
-  }
-  .container-header {
-    height: 72px;
   }
   .hero-section {
     padding: 112px 136px;
@@ -728,23 +731,19 @@ address {
     content: '';
     position: absolute;
     left: 0;
-    bottom: -28px;
+    bottom: -4px;
   }
   /* features tablet */
   .features-box {
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 16px;
+    gap: 72px 24px;
   }
   .features-item {
     flex-basis: calc((100% - 24px) / 2);
   }
   .features {
     text-align: start;
-  }
-  .features-item:nth-child(1),
-  .features-item:nth-child(2) {
-    margin-bottom: 48px;
   }
   /* team tablet */
   .team-container {
@@ -753,29 +752,19 @@ address {
   .team-box-items {
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 64px 24px;
   }
   .team-member-card {
     flex-basis: calc((100% - 24px) / 2);
-  }
-  .team-member-card:nth-child(1),
-  .team-member-card:nth-child(2) {
-    margin-bottom: 40px;
   }
   /* portfolio tablet */
   .portfolio-list {
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 72px 24px;
   }
   .portfolio-list-item {
     flex-basis: calc((100% - 24px) / 2);
-  }
-  .portfolio-list-item:nth-child(1),
-  .portfolio-list-item:nth-child(2),
-  .portfolio-list-item:nth-child(3),
-  .portfolio-list-item:nth-child(4) {
-    margin-bottom: 48px;
   }
   /* footer tablet */
   .container-footer {
@@ -860,9 +849,6 @@ address {
     font-size: 16px;
   }
   /* style heder & hero */
-  .current-page-link::after {
-    bottom: -28px;
-  }
   .icon-box {
     display: flex;
     width: 264px;
@@ -890,10 +876,6 @@ address {
   .features-text {
     font-weight: 400;
   }
-  .features-item:nth-child(1),
-  .features-item:nth-child(2) {
-    margin-bottom: 0;
-  }
   /* style team */
   .section-our-team {
     padding-top: 120px;
@@ -909,11 +891,6 @@ address {
     padding: 32px 0;
     width: 264px;
   }
-  .team-member-card:nth-child(1),
-  .team-member-card:nth-child(2) {
-    margin-bottom: 0;
-  }
-
   /* style portfolio */
   .portfolio-list {
     column-gap: 24px;
@@ -925,19 +902,13 @@ address {
     box-shadow: none;
   }
   .text-portfolio-list-item {
-    margin: 0;
-    padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
     background-color: white;
   }
-  .portfolio-list-item:nth-child(1),
-  .portfolio-list-item:nth-child(2),
-  .portfolio-list-item:nth-child(3),
-  .portfolio-list-item:nth-child(4) {
-    margin-bottom: 0;
-  }
   .link {
+    padding-top: 24px;
+    padding-bottom: 24px;
     position: relative;
   }
   .link:focus,
@@ -956,7 +927,7 @@ address {
     content: '';
     position: absolute;
     left: 0;
-    bottom: -28px;
+    bottom: -4px;
   }
   .link-contacts:hover::after {
     display: block;
@@ -967,7 +938,7 @@ address {
     content: '';
     position: absolute;
     left: 0;
-    bottom: -28px;
+    bottom: -4px;
   }
   .link-address {
     text-decoration: none;
@@ -986,7 +957,7 @@ address {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/people-office.jpg);
+      url('../images/people-office@2x.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
