--- a/css/styles.css
+++ b/css/styles.css
@@ -651,7 +651,7 @@ address {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url('../images/people-office@2x.jpg');
+      url('../images/people-office-tablet@2x-2.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -825,6 +825,18 @@ address {
 }
 /* descktop styles */
 /* header & hero tablet */
+@media (min-resolution: 192dpi) and (min-width: 1158px) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/people-office@2x.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+}
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
